<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movieInfoFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="amandine.project_2018.Controllers.MovieInfoFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- TODO default img if movie doesn't have a poster -->
        <ImageView
            android:id="@+id/movieInfoPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/movie_poster_description"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movieInfoReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#363636"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieInfoGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#767676"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/movieInfoRunningTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#767676"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/infoTitle01"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/info_title_01"
        android:textColor="#363636"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/movieInfoSynopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textColor="#767676"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoTitle01" />

    <TextView
        android:id="@+id/infoTitle02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/info_title_02"
        android:textColor="#363636"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieInfoSynopsis" />

    <TextView
        android:id="@+id/movieInfoCrew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textColor="#767676"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoTitle02" />

    <TextView
        android:id="@+id/infoTitle03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/info_title_03"
        android:textColor="#363636"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieInfoCrew" />

    <TextView
        android:id="@+id/movieInfoCast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textColor="#767676"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoTitle03" />

    <!-- TODO critics-->

</android.support.constraint.ConstraintLayout>

